# server-studio

./: .gitignore  README.md  pyproject.toml
docs/: manual-qa-ui.md
docs/superpowers/plans/: 2026-05-30-backups.md  2026-05-30-core-foundation.md  2026-05-30-error-toast.md  2026-05-30-final-completion.md  2026-05-30-forge-neoforge-spigot.md  2026-05-30-mod-browser.md  2026-05-30-packaging.md  2026-05-30-sharing.md  2026-05-30-ui-async-polish.md  2026-05-30-ui.md  2026-05-30-versions-and-java.md
packaging/: entry.py
scripts/: build.ps1
src/server_studio/: app.py  backup_manager.py  config.py  content_manager.py  java_manager.py  java_versions.py  manager.py  paths.py  process.py  temurin.py
tests/: conftest.py  test_async_runner.py  test_backup_manager.py  test_backup_service.py  test_backups_tab.py  test_config.py  test_console_view.py  test_content_manager.py  test_content_service.py  test_content_target.py  test_curseforge.py  test_dashboard.py  test_fabric_installer.py  test_forge_installer.py  test_installer_base.py  test_installer_registry.py  test_java_manager.py  test_java_versions.py  test_launch_args.py  test_launch_detect.py  test_loader_options.py  test_main_entry.py  test_main_window.py  test_manager.py  test_modrinth.py  test_mods_tab.py  test_neoforge_installer.py  test_network_info.py  test_new_server_wizard.py  test_packaging.py  test_paper_installer.py  test_paths.py  test_process.py  test_purpur_installer.py  test_runner.py  test_server_card.py  test_server_detail.py  test_settings_page.py  test_settings_store.py  test_sharing_service.py  (+13 more)
(+42 files in other folders)
