[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "server-studio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "PySide6>=6.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14", "pytest-qt>=4.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
